--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,11 +38,11 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.Enzo-0.1.jar}:\
     ${file.reference.gson-2.2.4.jar}:\
-    ${file.reference.controlsfx-8.0.6_20.jar}
+    ${file.reference.controlsfx-8.0.6_20.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
