--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.Enzo-0.1.jar=bin/Enzo-0.1.jar
 file.reference.gson-2.2.4.jar=bin\\gson-2.2.4.jar
 file.reference.jnotify-0.94.jar=bin/jnotify-0.94.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=bin/mysql-connector-java-5.1.23-bin.jar
+file.reference.xmlParserAPIs-2.6.2.jar=bin/xmlParserAPIs-2.6.2.jar
 file.reference.zip4j_1.3.2.jar=bin/zip4j_1.3.2.jar
 includes=**
 # Non-JavaFX 2.0 jar file creation is deactivated in JavaFX 2.0 projects
@@ -48,7 +49,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.zip4j_1.3.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.jnotify-0.94.jar}
+    ${file.reference.jnotify-0.94.jar}:\
+    ${file.reference.xmlParserAPIs-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
