--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,11 +46,11 @@ javac.classpath=\
     ${file.reference.Enzo-0.1.jar}:\
     ${file.reference.gson-2.2.4.jar}:\
     ${file.reference.controlsfx-8.0.6_20.jar}:\
-    ${javafx.classpath.extension}:\
     ${file.reference.zip4j_1.3.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.jnotify-0.94.jar}:\
-    ${file.reference.xmlParserAPIs-2.6.2.jar}
+    ${file.reference.xmlParserAPIs-2.6.2.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
