--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,9 @@ javac.classpath=\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.jnotify-0.94.jar}:\
     ${file.reference.xmlParserAPIs-2.6.2.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.JaspertReport.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
